--- a/index.html
+++ b/index.html
@@ -13,10 +13,59 @@
     <header class="hero">
         <div class="hero-content">
             <h1>KUNJ PATEL</h1>
-            <p>Developer | Innovator</p>
+            <p>IT Support Specialist | Developer</p>
+            <p class="contact">kunjpatelx@gmail.com</p>
         </div>
     </header>
     <main>
+        <section class="resume-tiles">
+            <div class="tile-grid">
+                <div class="tile">
+                    <h2>Skills</h2>
+                    <p class="overview">Expertise in IT support and development.</p>
+                    <div class="details hidden">
+                        <p>- Software Deployment & Patch Management (Jamf)</p>
+                        <p>- Troubleshooting Proficiency</p>
+                        <p>- ServiceNow, JIRA</p>
+                        <p>- Azure Cloud, Active Directory Management</p>
+                        <p>- Deployment Tools: Jamf, Intune</p>
+                        <p>- TCP/IP, UDP, ICMP, DNS, DHCP</p>
+                        <p>- Windows System Administration</p>
+                        <p>- Technical Documentation</p>
+                        <p>- Communication & Interpersonal Skills</p>
+                    </div>
+                    <button class="toggle-btn" onclick="toggleDetails(this)">More Details</button>
+                </div>
+                <div class="tile">
+                    <h2>Experience</h2>
+                    <p class="overview">5+ years in IT and software deployment.</p>
+                    <div class="details hidden">
+                        <h3>Bioscript Solutions, Moncton, NB</h3>
+                        <p>IT Support Specialist Tier 2, Feb 2024 - Nov 2024</p>
+                        <p>- Resolved hardware/software issues for pharmacy and clinic staff.</p>
+                        <p>- Supported system repairs, upgrades, and new user setups via Active Directory.</p>
+                        <p>- Managed support tickets and ensured compliance with safety reporting.</p>
+                        <h3>Majorel, Waterloo, ON</h3>
+                        <p>IT Support Specialist / Deployment Admin, Sep 2020 - Feb 2024</p>
+                        <p>- Managed workstation image creation and deployment for Windows/Mac.</p>
+                        <p>- Provided Azure cloud support and handled ticket escalations.</p>
+                        <h3>OVInfotech, Ahmedabad, IN</h3>
+                        <p>Support Specialist, Jan 2016 - Feb 2018</p>
+                        <p>- First point of contact for technical support and software deployments.</p>
+                    </div>
+                    <button class="toggle-btn" onclick="toggleDetails(this)">More Details</button>
+                </div>
+                <div class="tile">
+                    <h2>Education</h2>
+                    <p class="overview">Formal training in IT and development.</p>
+                    <div class="details hidden">
+                        <p>Conestoga College, Kitchener, ON - Enterprise Content Management, May 2019 - Aug 2020</p>
+                        <p>GLS University, Ahmedabad, IN - Bachelor of Computer Applications, Jun 2015 - Apr 2018</p>
+                    </div>
+                    <button class="toggle-btn" onclick="toggleDetails(this)">More Details</button>
+                </div>
+            </div>
+        </section>
         <section class="projects">
             <h2>Projects</h2>
             <div class="project-grid">
@@ -47,19 +96,9 @@
                 </div>
             </div>
         </section>
-        <section class="resume">
-            <h2>Resume</h2>
-            <div class="resume-content">
-                <p>Kunj Patel - Developer</p>
-                <p>Experience: 3+ years in IT support and software development</p>
-                <p>Skills: Full-Stack Dev, IT Support, UI/UX, Problem Solving</p>
-                <p><a href="resume.pdf" download>Download Resume [My Resume]</a></p>
-            </div>
-        </section>
-        <section class="github">
-            <h2>GitHub</h2>
-            <p>Explore my code creations.</p>
-            <a href="https://github.com/kunjpatelx" target="_blank" class="github-btn">Visit GitHub</a>
+        <section class="cta">
+            <h2>Discover More</h2>
+            <p><a href="resume.pdf" download>Download Resume [My Resume]</a></p>
         </section>
     </main>
     <footer>
