--- a/index.html
+++ b/index.html
@@ -3,26 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Kunj Patel - Developer Portfolio">
+    <meta name="description" content="Kunj Patel - IT Support Specialist Portfolio">
     <title>Kunj Patel - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/css2?family=Didot&family=Arial&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=VCR+OSD+Mono&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="hero">
-        <div class="hero-content">
-            <h1>KUNJ PATEL</h1>
-            <p>IT Support Specialist | Developer</p>
-            <p class="contact">kunjpatelx@gmail.com</p>
-        </div>
+    <div class="crt-overlay"></div>
+    <canvas id="matrixCanvas"></canvas>
+    <header>
+        <h1 class="glitch" data-text="KUNJ PATEL">KUNJ PATEL</h1>
+        <p>IT SUPPORT SPECIALIST | CODE WEAVER</p>
+        <p class="contact">kunjpatelx@gmail.com</p>
     </header>
     <main>
         <section class="resume-tiles">
+            <h2>Datafeed</h2>
             <div class="tile-grid">
                 <div class="tile">
-                    <h2>Skills</h2>
-                    <p class="overview">Expertise in IT support and development.</p>
+                    <h3>Skills</h3>
+                    <p class="overview">Core hacks in IT & dev.</p>
                     <div class="details hidden">
                         <p>- Software Deployment & Patch Management (Jamf)</p>
                         <p>- Troubleshooting Proficiency</p>
@@ -32,77 +33,82 @@
                         <p>- TCP/IP, UDP, ICMP, DNS, DHCP</p>
                         <p>- Windows System Administration</p>
                         <p>- Technical Documentation</p>
-                        <p>- Communication & Interpersonal Skills</p>
+                        <p>- Communication & TeamSync</p>
                     </div>
-                    <button class="toggle-btn" onclick="toggleDetails(this)">More Details</button>
+                    <button class="toggle-btn" onclick="toggleDetails(this)">Access Hack</button>
                 </div>
                 <div class="tile">
-                    <h2>Experience</h2>
-                    <p class="overview">5+ years in IT and software deployment.</p>
+                    <h3>Experience</h3>
+                    <p class="overview">5+ years in the grid.</p>
                     <div class="details hidden">
-                        <h3>Bioscript Solutions, Moncton, NB</h3>
-                        <p>IT Support Specialist Tier 2, Feb 2024 - Nov 2024</p>
-                        <p>- Resolved hardware/software issues for pharmacy and clinic staff.</p>
-                        <p>- Supported system repairs, upgrades, and new user setups via Active Directory.</p>
-                        <p>- Managed support tickets and ensured compliance with safety reporting.</p>
-                        <h3>Majorel, Waterloo, ON</h3>
-                        <p>IT Support Specialist / Deployment Admin, Sep 2020 - Feb 2024</p>
-                        <p>- Managed workstation image creation and deployment for Windows/Mac.</p>
-                        <p>- Provided Azure cloud support and handled ticket escalations.</p>
-                        <h3>OVInfotech, Ahmedabad, IN</h3>
+                        <h4>Bioscript Solutions, Moncton, NB</h4>
+                        <p>Tier 2 IT Specialist, Feb 2024 - Nov 2024</p>
+                        <p>- Fixed hardware/software for pharmacy ops.</p>
+                        <p>- Managed AD and tickets—zero downtime.</p>
+                        <h4>Majorel, Waterloo, ON</h4>
+                        <p>IT Support / Deployment, Sep 2020 - Feb 2024</p>
+                        <p>- Deployed Windows/Mac images—full lifecycle.</p>
+                        <p>- Azure cloud support, ticket escalation.</p>
+                        <h4>OVInfotech, Ahmedabad, IN</h4>
                         <p>Support Specialist, Jan 2016 - Feb 2018</p>
-                        <p>- First point of contact for technical support and software deployments.</p>
+                        <p>- First-line tech support, software rollouts.</p>
                     </div>
-                    <button class="toggle-btn" onclick="toggleDetails(this)">More Details</button>
+                    <button class="toggle-btn" onclick="toggleDetails(this)">Access Hack</button>
                 </div>
                 <div class="tile">
-                    <h2>Education</h2>
-                    <p class="overview">Formal training in IT and development.</p>
+                    <h3>Education</h3>
+                    <p class="overview">Code training decrypted.</p>
                     <div class="details hidden">
-                        <p>Conestoga College, Kitchener, ON - Enterprise Content Management, May 2019 - Aug 2020</p>
-                        <p>GLS University, Ahmedabad, IN - Bachelor of Computer Applications, Jun 2015 - Apr 2018</p>
+                        <p>Conestoga College, Kitchener, ON</p>
+                        <p>Enterprise Content Management, 2019 - 2020</p>
+                        <p>GLS University, Ahmedabad, IN</p>
+                        <p>Bachelor of Computer Applications, 2015 - 2018</p>
                     </div>
-                    <button class="toggle-btn" onclick="toggleDetails(this)">More Details</button>
+                    <button class="toggle-btn" onclick="toggleDetails(this)">Access Hack</button>
                 </div>
             </div>
         </section>
         <section class="projects">
-            <h2>Projects</h2>
+            <h2>Code Ops</h2>
             <div class="project-grid">
                 <div class="project-card">
                     <h3>BreakBuddy</h3>
-                    <p>A tool to prevent burnout with timed breaks.</p>
-                    <a href="https://kunjpatelx.github.io/BreakBuddy/" target="_blank">Explore Project</a>
+                    <p>A tool to hack burnout with timed breaks.</p>
+                    <a href="https://kunjpatelx.github.io/BreakBuddy/" target="_blank">Infiltrate</a>
                 </div>
                 <div class="project-card">
                     <h3>SolBagFumbler</h3>
-                    <p>A Solana wallet tracker—work in progress.</p>
-                    <a href="https://kunjpatelx.github.io/SolBagFumbler/" target="_blank">Explore Project</a>
+                    <p>Solana wallet tracker—retro shell, in progress.</p>
+                    <a href="https://kunjpatelx.github.io/SolBagFumbler/" target="_blank">Infiltrate</a>
                 </div>
                 <div class="project-card">
-                    <h3>Project 3</h3>
-                    <p>In development—watch this space.</p>
-                    <a href="#" target="_blank">Coming Soon</a>
+                    <h3>Op 3</h3>
+                    <p>Under construction—stay tuned.</p>
+                    <a href="#" target="_blank">Pending</a>
                 </div>
                 <div class="project-card">
-                    <h3>Project 4</h3>
-                    <p>In development—watch this space.</p>
-                    <a href="#" target="_blank">Coming Soon</a>
+                    <h3>Op 4</h3>
+                    <p>Under construction—stay tuned.</p>
+                    <a href="#" target="_blank">Pending</a>
                 </div>
                 <div class="project-card">
-                    <h3>Project 5</h3>
-                    <p>In development—watch this space.</p>
-                    <a href="#" target="_blank">Coming Soon</a>
+                    <h3>Op 5</h3>
+                    <p>Under construction—stay tuned.</p>
+                    <a href="#" target="_blank">Pending</a>
                 </div>
             </div>
         </section>
-        <section class="cta">
-            <h2>Discover More</h2>
-            <p><a href="resume.pdf" download>Download Resume [My Resume]</a></p>
+        <section class="github">
+            <h2>Vault Access</h2>
+            <p>Decrypt my source code.</p>
+            <a href="https://github.com/kunjpatelx" target="_blank" class="github-btn">Enter Vault</a>
+        </section>
+        <section class="resume-download">
+            <p><a href="resume.pdf" download>Download Datastream</a></p>
         </section>
     </main>
     <footer>
-        <p>© 2025 Kunj Patel. Crafted with Precision.</p>
+        <p>© 2025 Kunj Patel. Decoded from the Grid.</p>
     </footer>
     <script src="script.js"></script>
 </body>
