--- a/index.html
+++ b/index.html
@@ -7,108 +7,84 @@
     <title>Kunj Patel - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/css2?family=VCR+OSD+Mono&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Didot&display=swap" rel="stylesheet">
+    <!-- Animation Libraries -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/animejs@3.2.2/lib/anime.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@solana/web3.js@1.95.3/dist/web/index.js"></script>
 </head>
 <body>
-    <div class="crt-overlay"></div>
     <canvas id="matrixCanvas"></canvas>
     <header>
-        <h1 class="glitch" data-text="KUNJ PATEL">KUNJ PATEL</h1>
-        <p>IT SUPPORT SPECIALIST | CODE WEAVER</p>
+        <h1 id="name-header">KUNJ PATEL</h1>
+        <p id="tagline">IT SUPPORT SPECIALIST | CODE WEAVER</p>
         <p class="contact">kunjpatelx@gmail.com</p>
     </header>
     <main>
-        <section class="resume-tiles">
-            <h2>Datafeed</h2>
-            <div class="tile-grid">
-                <div class="tile">
-                    <h3>Skills</h3>
-                    <p class="overview">Core hacks in IT & dev.</p>
-                    <div class="details hidden">
-                        <p>- Software Deployment & Patch Management (Jamf)</p>
-                        <p>- Troubleshooting Proficiency</p>
-                        <p>- ServiceNow, JIRA</p>
-                        <p>- Azure Cloud, Active Directory Management</p>
-                        <p>- Deployment Tools: Jamf, Intune</p>
-                        <p>- TCP/IP, UDP, ICMP, DNS, DHCP</p>
-                        <p>- Windows System Administration</p>
-                        <p>- Technical Documentation</p>
-                        <p>- Communication & TeamSync</p>
-                    </div>
-                    <button class="toggle-btn" onclick="toggleDetails(this)">Access Hack</button>
-                </div>
-                <div class="tile">
-                    <h3>Experience</h3>
-                    <p class="overview">5+ years in the grid.</p>
-                    <div class="details hidden">
-                        <h4>Bioscript Solutions, Moncton, NB</h4>
-                        <p>Tier 2 IT Specialist, Feb 2024 - Nov 2024</p>
-                        <p>- Fixed hardware/software for pharmacy ops.</p>
-                        <p>- Managed AD and tickets—zero downtime.</p>
-                        <h4>Majorel, Waterloo, ON</h4>
-                        <p>IT Support / Deployment, Sep 2020 - Feb 2024</p>
-                        <p>- Deployed Windows/Mac images—full lifecycle.</p>
-                        <p>- Azure cloud support, ticket escalation.</p>
-                        <h4>OVInfotech, Ahmedabad, IN</h4>
-                        <p>Support Specialist, Jan 2016 - Feb 2018</p>
-                        <p>- First-line tech support, software rollouts.</p>
-                    </div>
-                    <button class="toggle-btn" onclick="toggleDetails(this)">Access Hack</button>
-                </div>
-                <div class="tile">
-                    <h3>Education</h3>
-                    <p class="overview">Code training decrypted.</p>
-                    <div class="details hidden">
-                        <p>Conestoga College, Kitchener, ON</p>
-                        <p>Enterprise Content Management, 2019 - 2020</p>
-                        <p>GLS University, Ahmedabad, IN</p>
-                        <p>Bachelor of Computer Applications, 2015 - 2018</p>
-                    </div>
-                    <button class="toggle-btn" onclick="toggleDetails(this)">Access Hack</button>
-                </div>
-            </div>
-        </section>
-        <section class="projects">
-            <h2>Code Ops</h2>
-            <div class="project-grid">
-                <div class="project-card">
-                    <h3>BreakBuddy</h3>
-                    <p>A tool to hack burnout with timed breaks.</p>
-                    <a href="https://kunjpatelx.github.io/BreakBuddy/" target="_blank">Infiltrate</a>
-                </div>
-                <div class="project-card">
-                    <h3>SolBagFumbler</h3>
-                    <p>Solana wallet tracker—retro shell, in progress.</p>
-                    <a href="https://kunjpatelx.github.io/SolBagFumbler/" target="_blank">Infiltrate</a>
-                </div>
-                <div class="project-card">
-                    <h3>Op 3</h3>
-                    <p>Under construction—stay tuned.</p>
-                    <a href="#" target="_blank">Pending</a>
-                </div>
-                <div class="project-card">
-                    <h3>Op 4</h3>
-                    <p>Under construction—stay tuned.</p>
-                    <a href="#" target="_blank">Pending</a>
-                </div>
-                <div class="project-card">
-                    <h3>Op 5</h3>
-                    <p>Under construction—stay tuned.</p>
-                    <a href="#" target="_blank">Pending</a>
-                </div>
-            </div>
-        </section>
-        <section class="github">
+        <section class="vault-access scroll-section">
             <h2>Vault Access</h2>
-            <p>Decrypt my source code.</p>
-            <a href="https://github.com/kunjpatelx" target="_blank" class="github-btn">Enter Vault</a>
+            <p>Enter the access code (9882) to unlock:</p>
+            <div class="vault-links">
+                <button onclick="requestVaultAccess('github')">Decrypt my source code</button>
+                <button onclick="requestVaultAccess('resume')">Enter Vault - Download Datastream</button>
+            </div>
         </section>
-        <section class="resume-download">
-            <p><a href="resume.pdf" download>Download Datastream</a></p>
+        <section class="projects scroll-section">
+            <h2>Projects</h2>
+            <div class="project-grid">
+                <div class="project-card" data-motion="card1">
+                    <h3>BreakBuddy</h3>
+                    <div class="project-preview">
+                        <p>A tool to hack burnout with timed breaks and productivity boosts. Features a sleek, minimalistic interface for scheduling breaks.</p>
+                    </div>
+                    <a href="https://kunjpatelx.github.io/BreakBuddy/" target="_blank">Enter the Matrix</a>
+                </div>
+                <div class="project-card" data-motion="card2">
+                    <h3>SolBagFumbler</h3>
+                    <div class="project-preview">
+                        <p>A Solana wallet tracker with retro flair—work in progress. Displays wallet balances and transactions in a Matrix-inspired design.</p>
+                    </div>
+                    <a href="https://kunjpatelx.github.io/SolBagFumbler/" target="_blank">Hack the Chain</a>
+                </div>
+                <div class="project-card" data-motion="card3">
+                    <h3>LEARN</h3>
+                    <div class="project-preview">
+                        <p>A learning assistant powered by OpenAI, generating personalized schedules for mastering any topic with various techniques (e.g., 5-Step Mastery, Feynman).</p>
+                    </div>
+                    <a href="https://learn-psi-liart.vercel.app/" target="_blank">Learn More</a>
+                </div>
+                <div class="project-card" data-motion="card4">
+                    <h3>Project 4</h3>
+                    <div class="project-preview">
+                        <p>In development—watch this space for an innovative IT solution.</p>
+                    </div>
+                    <a href="#" target="_blank">Coming Soon</a>
+                </div>
+                <div class="project-card" data-motion="card5">
+                    <h3>Project 5</h3>
+                    <div class="project-preview">
+                        <p>In development—watch this space for an innovative IT solution.</p>
+                    </div>
+                    <a href="#" target="_blank">Coming Soon</a>
+                </div>
+            </div>
+        </section>
+        <section class="solbagfumbler-section scroll-section">
+            <h2>Latest from SolBagFumbler</h2>
+            <p id="wallet-balance">Fetching wallet balance...</p>
+        </section>
+        <section class="github scroll-section" style="display: none;" id="github-link">
+            <h2>Code Repository</h2>
+            <p>Access my digital signature.</p>
+            <a href="https://github.com/kunjpatelx" target="_blank" class="github-btn">GitHub Portal</a>
+        </section>
+        <section class="resume-download scroll-section" style="display: none;" id="resume-link">
+            <p><a href="https://github.com/kunjpatelx/Portfolio2/raw/main/resume.pdf" download>Download Full Datastream [My Resume]</a></p>
         </section>
     </main>
     <footer>
-        <p>© 2025 Kunj Patel. Decoded from the Grid.</p>
+        <p>© 2025 Kunj Patel. Decoded from the Matrix.</p>
     </footer>
     <script src="script.js"></script>
 </body>
